data/derived/comb/progs/unify/prog1602.ml.out
Characters 0-3:
  abs -1;;
  ^^^
Error: This expression has type int -> int
       but an expression was expected of type int
